--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,45 @@
-spring.application.name=webBoardProject
+#서버 설정
+server.port=8087
+server.servlet.context-path=/
+server.servlet.encoding.charset=UTF-8
+	
+#뷰 리졸버 설정
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+	
+#정적 요소 접근
+spring.mvc.static-path-pattern=/resources/**
+spring.web.resources.static-locations=classpath:/static/
+	
+	
+# datasource (oracle)
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
+spring.datasource.username=webuser
+spring.datasource.password=web1479
+	
+# mapper.xml 위치 지정 (쿼리문을 갖고 있는 xml문서는 여기에 저장하도록)
+# **은 하위 폴더 레벨에 상관 없이 모든 경로를 뜻하며, *는 임의의 이름이 명시되어도 된다는 의미
+# xml location
+mybatis.mapper-locations=classpath:templates/query/*.xml
+	
+#mybatis.type-aliases-package=com.spring.**.**.vo
+	
+# mybatis 설정 파일 
+mybatis.config-location=classpath:templates/config/mybatis-config.xml
+# (만약 환경설정 파일을 만든다면 이러한 형식으로 만들 수 있지만, 현재는 간단한 예제이기 때문에 주석 처리 해 둠)
+
+#파일 업로드 설정
+spring.servlet.multipart.enabled=true
+
+#메모리 사용
+spring.servlet.multipart.file-size-threshold=2KB
+
+#업로드되는 파일의 최대 크기
+spring.servlet.multipart.max-file-size=100MB
+
+#한번에 올릴 수 있는 최대 크기
+spring.servlet.multipart.max-request-size=50MB
+
+#업로드 되는 파일을 저장할 공간
+spring.servlet.multipart.location=C:\\uploadStorage\\
